# velvet-engine

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  deny.toml
crates/velvet-action/: Cargo.toml
crates/velvet-action/src/: arena.rs  combat.rs  combo.rs  dash.rs  enemy.rs  hitstop.rs  hotline.rs  lib.rs  perception.rs  plugin.rs  prelude.rs  projectile.rs  recipes.rs  score.rs  story_host.rs  weapon.rs
crates/velvet-anim/: Cargo.toml
crates/velvet-anim/src/: director.rs  effect.rs  fx3d.rs  host.rs  lib.rs  pose.rs  recipes.rs  script.rs  track.rs  tween.rs
crates/velvet-app/: Cargo.toml
crates/velvet-app/src/: app.rs  change_tick.rs  exclusive.rs  lib.rs  ordering.rs  plugin.rs  prelude.rs  schedule.rs  stage.rs  system.rs  window_runner.rs  world_resources.rs
crates/velvet-assets/: Cargo.toml
crates/velvet-assets/src/: async_queue.rs  bundle.rs  handle.rs  hot_reload.rs  image_asset.rs  lib.rs  loader.rs  missing.rs  path.rs  platform.rs  plugin.rs  prelude.rs  refcount.rs  registry.rs  source.rs
crates/velvet-audio/: Cargo.toml
crates/velvet-audio/src/: bus.rs  clip.rs  dsp.rs  engine.rs  lib.rs  mixer.rs  music.rs  plugin.rs  prelude.rs  spatial.rs  voice.rs
crates/velvet-bench/: Cargo.toml
crates/velvet-bench/src/: main.rs
crates/velvet-build/: Cargo.toml
crates/velvet-build/src/: android.rs  export.rs  lib.rs  localization.rs  pack.rs  prelude.rs  steam.rs  web.rs
crates/velvet-cards/: Cargo.toml
crates/velvet-cards/fixtures/: bad_deck_unknown.json  sample_catalog.json  sample_deck.json
crates/velvet-cards/src/: catalog.rs  deck.rs  error.rs  io.rs  lib.rs  zones.rs
crates/velvet-cellular/: Cargo.toml
crates/velvet-cellular/src/: agent.rs  biome.rs  brush.rs  builtin.rs  cell.rs  chunk.rs  chunk_codec.rs  combat.rs  electricity.rs  enemy.rs  events.rs  fluid.rs  forces.rs  growth.rs  hot_sim.rs  lib.rs  lighting.rs  material.rs  material_catalog.rs  material_io.rs  multi_layer.rs  particle_presets.rs  particles.rs  pathfind.rs  physics.rs  prelude.rs  procgen.rs  projectile.rs  reaction_chain.rs  render_buf.rs  replay.rs  save.rs  session.rs  sim.rs  sim_debug.rs  spatial.rs  spells.rs  status.rs  wand.rs  world.rs  (+1 more)
crates/velvet-cellular/src/rules/: blood.rs  density.rs  fire.rs  (+6 more)
crates/velvet-cellular/tests/: integration_noita_paths.rs
crates/velvet-cli/: Cargo.toml
crates/velvet-cli/src/: cards_cmd.rs  crypto_cmd.rs  doctor.rs  document_cmd.rs  export_cmd.rs  image_cmd.rs  launch_cmd.rs  loc_cmd.rs  main.rs  menu_cmd.rs  narrative_cmd.rs  new_cmd.rs  pack_cmd.rs  play_cmd.rs  script_cmd.rs  story_cmd.rs  style_cmd.rs  vs3_cmd.rs  workspace_cmd.rs
crates/velvet-core/: Cargo.toml
crates/velvet-core/src/: config.rs  diagnostics.rs  error.rs  hash.rs  lib.rs  netcode.rs  plugin.rs  plugin_registry.rs  prelude.rs  profiling.rs  services.rs  validate.rs  version.rs
crates/velvet-crypto/: Cargo.toml
crates/velvet-crypto/src/: hybrid.rs  lib.rs
crates/velvet-document/: Cargo.toml
crates/velvet-document/src/: designer.rs  drag.rs  graph.rs  level.rs  lib.rs  model.rs  mutate.rs  narrative.rs  parse.rs  render.rs
crates/velvet-ecs/: Cargo.toml
crates/velvet-ecs/src/: change_detect.rs  commands.rs  component.rs  entity.rs  events.rs  lib.rs  prelude.rs  query.rs  registry.rs  world.rs
crates/velvet-editor/: Cargo.toml  run-studio.bat
crates/velvet-editor/src/: asset_panel.rs  commands.rs  console.rs  document_edit.rs  gui.rs  inspector.rs  layers.rs  lib.rs  main.rs  project_browser.rs  script_panel.rs  story_lang.rs  studio.rs  studio_paint.rs  studio_project.rs  vscript.rs
crates/velvet-image/: Cargo.toml
crates/velvet-image/src/: lib.rs
crates/velvet-input/: Cargo.toml
crates/velvet-input/src/: action.rs  action_buffer.rs  axis.rs  binding.rs  chord.rs  context.rs  deadzone.rs  gesture.rs  lib.rs  plugin.rs  prelude.rs  replay.rs  state.rs  virtual_controls.rs  winit_map.rs
crates/velvet-integration-tests/: Cargo.toml
crates/velvet-integration-tests/src/: lib.rs
crates/velvet-integration-tests/tests/: document_roundtrip.rs  ecs_scene.rs  full_pipeline.rs  render_audio_input.rs  script_text_ui.rs  story_core_wiring.rs  story_play_rpg.rs
crates/velvet-math/: Cargo.toml
crates/velvet-math/src/: aabb.rs  color.rs  curve.rs  easing.rs  lib.rs  mat3.rs  mat4.rs  random.rs  rect.rs  srgb.rs  transform.rs  vec2.rs  vec3.rs
crates/velvet-play/: Cargo.toml
crates/velvet-play/src/: ai.rs  animation.rs  camera.rs  camera_fx.rs  checkpoint.rs  collider.rs  components.rs  debug_draw.rs  interaction.rs  lib.rs  map.rs  navigation.rs  particles.rs  path.rs  physics.rs  plugin.rs  prelude.rs  regions.rs  tile_collision.rs  triggers.rs  world.rs
crates/velvet-project/: Cargo.toml
crates/velvet-project/src/: lib.rs  modules.rs  validate.rs
crates/velvet-render/: Cargo.toml
crates/velvet-render/src/: animation.rs  atlas.rs  batch.rs  camera.rs  culling.rs  debug_overlay.rs  gpu.rs  letterbox.rs  lib.rs  material.rs  particles.rs  plugin.rs  postprocess.rs  prelude.rs  product_batch.rs  profile.rs  render_plan.rs  sort_key.rs  sprite.rs  stats.rs  texture.rs
crates/velvet-rpg/: Cargo.toml
crates/velvet-rpg/src/: dialogue_bridge.rs  equipment.rs  inventory.rs  item.rs  leveling.rs  lib.rs  party.rs  plugin.rs  prelude.rs  quest.rs  shop.rs  stats.rs
crates/velvet-runtime/: Cargo.toml
crates/velvet-runtime/src/: main.rs
crates/velvet-scene/: Cargo.toml
crates/velvet-scene/src/: async_load.rs  hierarchy.rs  lib.rs  manager.rs  prefab.rs  prefab_variants.rs  prelude.rs  scene.rs  serde_components.rs  transition_graph.rs
crates/velvet-script-bytecode/: Cargo.toml
crates/velvet-script-bytecode/src/: lib.rs  opcodes_vs2.rs
crates/velvet-script-compiler/: Cargo.toml
crates/velvet-script-compiler/src/: compiler.rs  lib.rs  vs2_codegen.rs  vs2_lower.rs
crates/velvet-script-corpus/: Cargo.toml
crates/velvet-script-corpus/src/: lib.rs
crates/velvet-script-format/: Cargo.toml
crates/velvet-script-format/src/: lib.rs  vs2_format.rs
(+376 files in other folders)
