[package]
name = "velvet-action"
description = "Top-down action systems for Velvet Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-core = { workspace = true }
velvet-app = { workspace = true }
velvet-play = { workspace = true }
velvet-math = { workspace = true }
velvet-time = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
