[package]
name = "velvet-build"
description = "Build, pack, localization and export helpers for Velvet Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-core = { workspace = true }
velvet-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# enable if needed later
web = []
