[package]
name = "velvet-cellular"
description = "From-scratch cellular material simulation core for Noita-like / falling-sand games (author API, no external physics)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-math = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"

[features]
default = ["parallel"]
# Multi-threaded chunk stepping via std::thread work pool (no external physics crates).
parallel = []
