[package]
name = "velvet-cellular"
description = "ALPHA — From-scratch cellular / falling-sand core for Noita-like games (author API, no external physics)"
# Sand / cellular stack is explicitly alpha — not a stable product surface yet.
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
velvet-math = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"

[features]
default = ["parallel"]
# Multi-threaded chunk stepping via std::thread work pool (no external physics crates).
parallel = []
