[package]
name = "velvet-input"
description = "Action-based input abstraction for Velvet Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-core = { workspace = true }
velvet-app = { workspace = true }
velvet-math = { workspace = true }
velvet-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
indexmap = { workspace = true }
winit = { workspace = true, optional = true }

[features]
default = ["winit"]
winit = ["dep:winit"]
