[package]
name = "velvet-play"
description = "2D gameplay systems for Velvet Engine (maps, physics, camera, AI)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-core = { workspace = true }
velvet-app = { workspace = true }
velvet-math = { workspace = true }
velvet-ecs = { workspace = true }
velvet-time = { workspace = true }
velvet-input = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
