[package]
name = "velvet-rpg"
description = "RPG systems for Velvet Engine (stats, inventory, quests, party)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-core = { workspace = true }
velvet-app = { workspace = true }
velvet-play = { workspace = true }
velvet-math = { workspace = true }
velvet-story = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
