[package]
name = "velvet-script-bytecode"
description = "Bytecode opcodes and modules for Velvet Script"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
