[package]
name = "velvet-script-compiler"
description = "Compile Velvet Script AST to bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velvet-script-ast = { workspace = true }
velvet-script-bytecode = { workspace = true }
velvet-script-parser = { workspace = true }
thiserror = { workspace = true }
